tests/react_modules/react_modules.exp
Error ------------------------------------------------------------------------------------ createclass-callsite.js:12:23

Cannot get `this.props` because property `props` is missing in implicit `this` parameter of function type [1].
[incompatible-use]

   createclass-callsite.js:12:23
   12|     return <div>{this.props.name}</div>;
                             ^^^^^

References:
   <BUILTINS>/react.js:59:3
   59|   render(): React$Node;
         ^^^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------ createclass-callsite.js:20:10

Cannot create `Hello` element because property `name` is missing in props [1] but exists in object type [2].
[prop-missing]

   createclass-callsite.js:20:10
   20|         <Hello />
                ^^^^^

References:
   createclass-callsite.js:20:9
   20|         <Hello />
               ^^^^^^^^^ [1]
   createclass-module.js:5:36
    5| const Hello: Class<React$Component<{ name: string }, {}>> = React.createClass({
                                          ^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------ createclass-callsite.js:21:10

Cannot create `HelloLocal` element because property `name` is missing in props [1] but exists in propTypes of React
component [2]. [prop-missing]

   createclass-callsite.js:21:10
   21|         <HelloLocal />
                ^^^^^^^^^^

References:
   createclass-callsite.js:21:9
   21|         <HelloLocal />
               ^^^^^^^^^^^^^^ [1]
   createclass-callsite.js:7:14
                    v
    7|   propTypes: {
    8|     name: React.PropTypes.string.isRequired,
    9|   },
         ^ [2]


Error -------------------------------------------------------------------------------------- createclass-module.js:11:23

Cannot get `this.props` because property `props` is missing in implicit `this` parameter of function type [1].
[incompatible-use]

   createclass-module.js:11:23
   11|     return <div>{this.props.name}</div>;
                             ^^^^^

References:
   <BUILTINS>/react.js:59:3
   59|   render(): React$Node;
         ^^^^^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------- es6class-proptypes-callsite.js:20:10

Cannot create `Hello` element because property `name` is missing in props [1] but exists in object type [2].
[prop-missing]

   es6class-proptypes-callsite.js:20:10
   20|         <Hello />
                ^^^^^

References:
   es6class-proptypes-callsite.js:20:9
   20|         <Hello />
               ^^^^^^^^^ [1]
   es6class-proptypes-module.js:5:37
    5| class Hello extends React.Component<{name: string}> {
                                           ^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------- es6class-proptypes-callsite.js:21:10

Cannot create `HelloLocal` element because property `name` is missing in props [1] but exists in object type [2].
[prop-missing]

   es6class-proptypes-callsite.js:21:10
   21|         <HelloLocal />
                ^^^^^^^^^^

References:
   es6class-proptypes-callsite.js:21:9
   21|         <HelloLocal />
               ^^^^^^^^^^^^^^ [1]
   es6class-proptypes-callsite.js:6:42
    6| class HelloLocal extends React.Component<{name: string}> {
                                                ^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------- es6class-types-callsite.js:18:10

Cannot create `Hello` element because property `name` is missing in props [1] but exists in `Props` [2]. [prop-missing]

   es6class-types-callsite.js:18:10
   18|         <Hello />
                ^^^^^

References:
   es6class-types-callsite.js:18:9
   18|         <Hello />
               ^^^^^^^^^ [1]
   es6class-types-module.js:7:37
    7| class Hello extends React.Component<Props> {
                                           ^^^^^ [2]


Error --------------------------------------------------------------------------------- es6class-types-callsite.js:19:10

Cannot create `HelloLocal` element because property `name` is missing in props [1] but exists in `Props` [2].
[prop-missing]

   es6class-types-callsite.js:19:10
   19|         <HelloLocal />
                ^^^^^^^^^^

References:
   es6class-types-callsite.js:19:9
   19|         <HelloLocal />
               ^^^^^^^^^^^^^^ [1]
   es6class-types-callsite.js:8:42
    8| class HelloLocal extends React.Component<Props> {
                                                ^^^^^ [2]



Found 8 errors
